syntax = "proto3";

import "google/protobuf/wrappers.proto";

service Customers {
  rpc QueryCustomers (QueryCustomersRequest) returns (QueryCustomersResponse);
}

message Customer {
    int32 id = 1;
    google.protobuf.StringValue given_name = 2;
    google.protobuf.StringValue lastname = 3;
    google.protobuf.StringValue description = 4;
    google.protobuf.StringValue street = 5;
    google.protobuf.StringValue city = 6;
    google.protobuf.StringValue zip_code = 7;
    google.protobuf.StringValue country = 8;
}

message QueryCustomersRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message QueryCustomersResponse {
    int32 page = 1;
    int32 page_size = 2;
    int32 total_items = 3;
    repeated Customer items = 4;
}
